<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/add"
    android:background="#b4cfca">

    <EditText
        android:id="@+id/systolic"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_background"
        android:ems="10"
        android:hint="Systolic"
        android:inputType="text"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.127" />

    <EditText
        android:id="@+id/diastolic"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Diastolic"
        android:paddingLeft="10dp"
        android:inputType="text"
        android:background="@drawable/edit_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.233" />

    <EditText
        android:id="@+id/heart"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_background"
        android:ems="10"
        android:hint="Heart rate"
        android:inputType="text"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.338" />

    <EditText
        android:id="@+id/cur_date"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_background"
        android:drawableRight="@drawable/ic_baseline_edit_calendar_24"
        android:drawablePadding="30dp"
        android:ems="10"
        android:paddingLeft="10dp"
        android:inputType="text"
        android:hint="Date(click icon)"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <EditText
        android:id="@+id/cur_time"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:background="@drawable/edit_background"
        android:paddingLeft="10dp"
        android:drawableRight="@drawable/ic_baseline_watch_later_24"
        android:drawablePadding="30dp"
        android:ems="10"
        android:inputType="text"
        android:hint="Time(click icon)"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541" />

    <EditText
        android:id="@+id/comment"
        android:layout_width="320dp"
        android:layout_height="70dp"
        android:background="@drawable/edit_background"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Comment"
        android:inputType="textMultiLine"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.739" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="153dp"
        android:layout_height="64dp"
        android:text="Confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939"
        android:backgroundTint="#04595c"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/h" />

</androidx.constraintlayout.widget.ConstraintLayout>