...
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.448" />

        <ImageButton
            android:id="@+id/delete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/round_button"
            android:padding="10dp"
            android:src="@drawable/ic_baseline_delete_forever_24"
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.985"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/edit"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/round_button"
            android:padding="10dp"
...
